Projet GL/Projet_GL/src/test/deca/syntax/invalid/bad_readInt.deca
// Description:
//    readInt avec indentificateur
//
// Resultats:
//    extraneous input 'a' expecting ')'
//
// Historique:
//    cree le 10/01/2023

{
    readInt(a);
}
